--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="search">
-        <input type="text" class="input" placeholder="Search">
+        <input type="text" class="input" placeholder="Yalnızca cesurların işidir badana..">
         <button class="btn">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
