--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="search">
         <input type="text" class="input" placeholder="Yalnızca cesurların işidir badana..">
         <button class="btn">
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-paint-roller"></i>
         </button>
     </div>
     
